--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.3",
     "helmet": "^4.1.1",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "node-url-shortener": "^1.1.11",
     "notistack": "^1.0.1",
     "react": "^16.13.1",
