--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "helmet": "^4.1.1",
+    "copy-to-clipboard": "^3.3.1",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
-    "node-url-shortener": "^1.1.11",
-    "notistack": "^1.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
