--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "bootstrap": "^4.5.3",
     "copy-to-clipboard": "^3.3.1",
     "js-cookie": "^2.2.1",
+    "maven": "^5.0.0",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.12.1",
+    "react-material-ui-form-validator": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
     "tinyurl": "^1.1.7"
